@@ -1,5 +1,7 @@
 3.0.6:
   Fix logging for monolithic setup
+  Add whatsup option
+  Fix prometheus stats
 3.0.5:
   Fix for python 2.x
 3.0.4:
